unpackaged/main/default/objects/Opportunity/fields/Highest_Price__c.field-meta.xml
<CustomField>
    <fullName>Highest_Price__c</fullName>
    <label>Highest Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>