unpackaged/main/default/objects/Opportunity/fields/Is_Check__c.field-meta.xml
<CustomField>
    <fullName>Is_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Check</label>
    <type>Checkbox</type>
</CustomField>