unpackaged/main/default/objects/Opportunity/fields/Last_Updated_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Month__c</fullName>
    <label>Last Updated Month</label>
    <length>18</length>
    <type>Text</type>
</CustomField>