unpackaged/main/default/objects/Opportunity/fields/Lowest_Price__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Price__c</fullName>
    <label>Lowest Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>