unpackaged/main/default/objects/Opportunity/fields/Total_Number_of_Business_Entities__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Business_Entities__c</fullName>
    <label>Total Number of Business Entities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>