unpackaged/main/default/objects/Opportunity/validationRules/Close_date_cannot_past_24.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_date_cannot_past_24</fullName>
    <active>false</active>
    <errorConditionFormula>CloseDate &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Closed Date can not be in past</errorMessage>
</ValidationRule>