unpackaged/main/default/objects/Opportunity/validationRules/Proba_Of_Lost_Opport_23.validationRule-meta.xml
<ValidationRule>
    <fullName>Proba_Of_Lost_Opport_23</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &quot;Closed Lost&quot;),
 Probability  &lt;&gt; 0)</errorConditionFormula>
    <errorMessage>Lost Opportunity Probability must be Zero</errorMessage>
</ValidationRule>