unpackaged/main/default/objects/Opportunity/validationRules/Require_Product_Name_From_HardWare.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Product_Name_From_HardWare</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Product_Type__c, &quot;Hardware&quot;),
     NOT(ISNULL(TEXT(Product_Name__c))) 
)</errorConditionFormula>
    <errorDisplayField>Product_Name__c</errorDisplayField>
    <errorMessage>If Product Type Is Hardware then Product must be selected</errorMessage>
</ValidationRule>