unpackaged/main/default/objects/Opportunity/validationRules/Type_Field_Enforced.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Field_Enforced</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.BypassValidation__c.BypassVR__c == FALSE &amp;&amp; ISPICKVAL(Type, &quot;&quot;)</errorConditionFormula>
    <errorMessage>Type field cannot be blank</errorMessage>
</ValidationRule>