unpackaged/main/default/objects/Opportunity/validationRules/validatd_closedate_18.validationRule-meta.xml
<ValidationRule>
    <fullName>validatd_closedate_18</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED(CloseDate)
  ),
  CloseDate &lt; DATE(YEAR(TODAY()), MONTH(TODAY()) - 1, 1),
  CloseDate &gt;= DATE(YEAR(TODAY()), MONTH(TODAY()) - 2, 1)
)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Close Date of an opportunity is not within a month prior to the current month</errorMessage>
</ValidationRule>