unpackaged/main/default/objects/Opportunity/validationRules/Validate_CloseDate_19.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_CloseDate_19</fullName>
    <active>false</active>
    <errorConditionFormula>CloseDate &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Date Should Not be less than present date</errorMessage>
</ValidationRule>