unpackaged/main/default/objects/Opportunity/validationRules/Validate_Devivery_Date_12.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Devivery_Date_12</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK( Delivery_Date__c ) ,
 OR(ISPICKVAL(StageName, &quot;Closed Won&quot;) ,
ISPICKVAL(StageName, &quot;Negotiation/Review&quot;)
) 
)</errorConditionFormula>
    <errorDisplayField>Delivery_Date__c</errorDisplayField>
    <errorMessage>Please provide a Delivery Date when the Opportunity is in the Closed Won or Negotiation/Review stage.</errorMessage>
</ValidationRule>