unpackaged/main/default/objects/Opportunity/validationRules/Validation_Amount_21.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Amount_21</fullName>
    <active>false</active>
    <errorConditionFormula>OR(Amount &lt; 0,Amount &gt; 100000000)</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>Amount must be Positive and not more than $10 million</errorMessage>
</ValidationRule>