unpackaged/main/default/objects/Opportunity/validationRules/Validation_PercentField_20.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_PercentField_20</fullName>
    <active>false</active>
    <errorConditionFormula>OR(Probability &lt; 0.1, Probability &gt; 0.4)</errorConditionFormula>
    <errorDisplayField>Probability</errorDisplayField>
    <errorMessage>Probability must be B/W 0 To 40%</errorMessage>
</ValidationRule>