unpackaged/main/default/objects/Opportunity/validationRules/Validation_rule_22.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_rule_22</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Product_Count__c = 0
, ISCHANGED(Product_Count__c) )</errorConditionFormula>
    <errorMessage>opportunity has at least one opportunity product</errorMessage>
</ValidationRule>