unpackaged/main/default/objects/Opportunity/validationRules/Validation_Rule_28.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_28</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    Special_Discount__c, 
    ISBLANK(Discount_Percentage__c)
)</errorConditionFormula>
    <errorDisplayField>Discount_Percentage__c</errorDisplayField>
    <errorMessage>provide a Discount Percentage when the Special Discount checkbox is checked</errorMessage>
</ValidationRule>